--- a/client/src/pages/authPage/auth-page.styles.css
+++ b/client/src/pages/authPage/auth-page.styles.css
@@ -18,6 +18,11 @@
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.25)
 }
 
+
+form div.input-label.last {
+  margin-bottom: 10px;
+}
+
 .signup,
 .login {
   position: absolute;
@@ -114,5 +119,33 @@ form {
     transform: translateX(0%);
     opacity: 1;
     z-index: 3;
+  }
+}
+
+.switch-form {
+  position: absolute;
+  bottom: 62px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.signup .switch-form {
+  bottom: 3px;
+}
+
+.login button.switch,
+.signup button.switch {
+  display: inline-block;
+  background-color: transparent;
+  color: rgba(2, 186, 255, 1)
+}
+
+@media(min-width:767px) {
+  .switch-form {
+    display: none;
   }
 }
